force-app/main/default/objects/DatosFlujo__c/DatosFlujo__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Datos que se utilizan en el flujo de Gastos Hipotecarios</description>
    <label>Datos Flujo</label>
</CustomObject>