force-app/main/default/objects/DatosFlujo__c/fields/ClauSueloCasoAsunto__c.field-meta.xml
<CustomField>
    <fullName>ClauSueloCasoAsunto__c</fullName>
    <label>ClauSuelo - Creación Caso - Asunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>