force-app/main/default/objects/DatosFlujo__c/fields/ClauSueloCasoDescripcion__c.field-meta.xml
<CustomField>
    <fullName>ClauSueloCasoDescripcion__c</fullName>
    <label>ClauSuelo - Creación Caso - Descrip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>