force-app/main/default/objects/DatosFlujo__c/fields/ClauSueloNombreOpp__c.field-meta.xml
<CustomField>
    <fullName>ClauSueloNombreOpp__c</fullName>
    <description>Nombre de la oportunidad para el flujo de Clausula Suelo</description>
    <label>ClauSuelo - Nombre Opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>