force-app/main/default/objects/DatosFlujo__c/fields/ClausulaFAQs__c.field-meta.xml
<CustomField>
    <fullName>ClausulaFAQs__c</fullName>
    <description>enlace al documento correspondiente al PDF de clausula suelo</description>
    <label>Clausula Suelo - FAQs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>