force-app/main/default/objects/DatosFlujo__c/fields/CSueloDescripcionRedsys__c.field-meta.xml
<CustomField>
    <fullName>CSueloDescripcionRedsys__c</fullName>
    <description>Descripción del pago de Redsys</description>
    <label>ClauSuelo - Descripción Pago Redsys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>