force-app/main/default/objects/DatosFlujo__c/fields/DescripcionPagoRedsys__c.field-meta.xml
<CustomField>
    <fullName>DescripcionPagoRedsys__c</fullName>
    <label>GastHipot - Descripción Pago Redsys</label>
    <length>40</length>
    <type>Text</type>
</CustomField>