force-app/main/default/objects/DatosFlujo__c/fields/EstadoCuenta__c.field-meta.xml
<CustomField>
    <fullName>EstadoCuenta__c</fullName>
    <description>Estado de la cuenta en la creación</description>
    <label>Estado Cuenta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>