force-app/main/default/objects/DatosFlujo__c/fields/EtapaFinalOportunidadContrOnline__c.field-meta.xml
<CustomField>
    <fullName>EtapaFinalOportunidadContrOnline__c</fullName>
    <description>Etapa final asignada a la oportunidad en el flujo de comunidad</description>
    <label>EtapaFinalOportunidadContrOnline</label>
    <length>50</length>
    <type>Text</type>
</CustomField>