force-app/main/default/objects/DatosFlujo__c/fields/EtapaOEtapaOportuniportunidadContrOnline__c.field-meta.xml
<CustomField>
    <fullName>EtapaOEtapaOportuniportunidadContrOnline__c</fullName>
    <description>Etapa de creación de la oportunidad</description>
    <label>EtapaOportunidadContrOnline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>