force-app/main/default/objects/DatosFlujo__c/fields/FlujoCasoMotivo__c.field-meta.xml
<CustomField>
    <fullName>FlujoCasoMotivo__c</fullName>
    <description>Motivo del caso creado</description>
    <label>Flujo Creación Caso - Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>