force-app/main/default/objects/DatosFlujo__c/fields/FlujoCasoOrigen__c.field-meta.xml
<CustomField>
    <fullName>FlujoCasoOrigen__c</fullName>
    <description>Origen del caso creado</description>
    <label>Flujo Creación Caso - Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>