force-app/main/default/objects/DatosFlujo__c/fields/FlujoCasoTipo__c.field-meta.xml
<CustomField>
    <fullName>FlujoCasoTipo__c</fullName>
    <description>Tipo del caso creado</description>
    <label>Flujo Creación Caso - Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>