force-app/main/default/objects/DatosFlujo__c/fields/GastosHipCasoAsunto__c.field-meta.xml
<CustomField>
    <fullName>GastosHipCasoAsunto__c</fullName>
    <description>Asunto del Caso para el flujo de Gastos Hip</description>
    <label>GastosHipFlujo Creación Caso - Asunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>