force-app/main/default/objects/DatosFlujo__c/fields/GastosHipCasoDescripcion__c.field-meta.xml
<CustomField>
    <fullName>GastosHipCasoDescripcion__c</fullName>
    <label>GastosHipFlujo Creación Caso - Descripci</label>
    <length>255</length>
    <type>Text</type>
</CustomField>