force-app/main/default/objects/DatosFlujo__c/fields/GastosHipDescripcionPago__c.field-meta.xml
<CustomField>
    <fullName>GastosHipDescripcionPago__c</fullName>
    <label>GastosHip - Descripción Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>