force-app/main/default/objects/DatosFlujo__c/fields/GastosHipFAQs__c.field-meta.xml
<CustomField>
    <fullName>GastosHipFAQs__c</fullName>
    <description>enlace al documento correspondiente al PDF de Gastos Hipotecarios</description>
    <label>Gastos Hipotecarios - FAQs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>