force-app/main/default/objects/DatosFlujo__c/fields/GastosHipNombreOpp__c.field-meta.xml
<CustomField>
    <fullName>GastosHipNombreOpp__c</fullName>
    <label>GastosHip - Nombre Opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>