force-app/main/default/objects/DatosFlujo__c/fields/IdPropietarioSegundoTitular__c.field-meta.xml
<CustomField>
    <fullName>IdPropietarioSegundoTitular__c</fullName>
    <description>Id del usuario que va a ser el propietario de la cuenta del segundo titular</description>
    <label>IdPropietarioSegundoTitular</label>
    <length>18</length>
    <type>Text</type>
</CustomField>