force-app/main/default/objects/DatosFlujo__c/fields/IDTipoRegistroCuentaPersonal__c.field-meta.xml
<CustomField>
    <fullName>IDTipoRegistroCuentaPersonal__c</fullName>
    <description>Id del tipo de registro de las cuentas personales</description>
    <label>IDTipoRegistroCuentaPersonal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>