force-app/main/default/objects/DatosFlujo__c/fields/IRPHCasoAsunto__c.field-meta.xml
<CustomField>
    <fullName>IRPHCasoAsunto__c</fullName>
    <description>Asunto del caso para el flujo de IRPH</description>
    <label>IRPH - Creación Caso - Asunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>