force-app/main/default/objects/DatosFlujo__c/fields/IRPHCasoDescripcion__c.field-meta.xml
<CustomField>
    <fullName>IRPHCasoDescripcion__c</fullName>
    <description>Descripción del caso para el flujo de IRPH</description>
    <label>IRPH- Creación Caso - Descrip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>