force-app/main/default/objects/DatosFlujo__c/fields/IRPHDescripcionRedsys__c.field-meta.xml
<CustomField>
    <fullName>IRPHDescripcionRedsys__c</fullName>
    <description>Descripción del pago para el flujo de Redsys</description>
    <label>IRPH - Descripción Pago Redsys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>