force-app/main/default/objects/DatosFlujo__c/fields/IRPHFAQs__c.field-meta.xml
<CustomField>
    <fullName>IRPHFAQs__c</fullName>
    <description>enlace al documento correspondiente al PDF de IRPH</description>
    <label>IRPH - FAQs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>