force-app/main/default/objects/DatosFlujo__c/fields/IRPHNombreOpp__c.field-meta.xml
<CustomField>
    <fullName>IRPHNombreOpp__c</fullName>
    <description>Nombre de la oportunidad para el flujo de IRPH</description>
    <label>IRPH - Nombre Opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>