force-app/main/default/objects/DatosFlujo__c/fields/RevolCasoAsunto__c.field-meta.xml
<CustomField>
    <fullName>RevolCasoAsunto__c</fullName>
    <description>Asunto del caso del flujo de Revolving</description>
    <label>Revoling - Creación Caso - Asunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>