force-app/main/default/objects/DatosFlujo__c/fields/RevolCasoDescripcion__c.field-meta.xml
<CustomField>
    <fullName>RevolCasoDescripcion__c</fullName>
    <description>Descripción del caso para el flujo de Revolving</description>
    <label>Revoling- Creación Caso - Descrip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>