force-app/main/default/objects/DatosFlujo__c/fields/RevolDescripcionRedsys__c.field-meta.xml
<CustomField>
    <fullName>RevolDescripcionRedsys__c</fullName>
    <description>Descripción para el pago de Redsys en el flujo de Revolving</description>
    <label>Revoling - Descripción Pago Redsys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>