force-app/main/default/objects/DatosFlujo__c/fields/RevolNombreOpp__c.field-meta.xml
<CustomField>
    <fullName>RevolNombreOpp__c</fullName>
    <description>Nombre de la oportunidad creada mediante el flujo de Revolving</description>
    <label>Revoling - Nombre Opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>