force-app/main/default/objects/DatosFlujo__c/fields/RevolvingFAQs__c.field-meta.xml
<CustomField>
    <fullName>RevolvingFAQs__c</fullName>
    <description>enlace al documento correspondiente al PDF de Revolving</description>
    <label>Revolving - FAQs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>