force-app/main/default/objects/DatosFlujo__c/fields/RolFuncionContacto__c.field-meta.xml
<CustomField>
    <fullName>RolFuncionContacto__c</fullName>
    <description>Rol que se pone al contacto en la oportunidad que se crea en la conversión del candidato</description>
    <label>Rol Funcion Contacto</label>
    <length>25</length>
    <type>Text</type>
</CustomField>