force-app/main/default/objects/DatosFlujo__c/fields/RolSegundoTitular__c.field-meta.xml
<CustomField>
    <fullName>RolSegundoTitular__c</fullName>
    <description>Rol que se pone al contacto en la oportunidad que se crea como segundo titular</description>
    <label>Rol Segundo Titular</label>
    <length>25</length>
    <type>Text</type>
</CustomField>